Fix carousel responsive(overflow) issue

--- a/css/tailwind/output.css
+++ b/css/tailwind/output.css
@@ -905,6 +905,11 @@ select{
   margin-right: 8rem;
 }
 
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .my-12{
   margin-top: 3rem;
   margin-bottom: 3rem;
@@ -1050,13 +1055,13 @@ select{
   height: fit-content;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-max{
   height: -moz-max-content;
   height: max-content;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .\!w-12{
@@ -1114,10 +1119,6 @@ select{
 
 .w-full{
   width: 100%;
-}
-
-.w-\[418px\]{
-  width: 418px;
 }
 
 .flex-shrink{
@@ -1275,9 +1276,19 @@ select{
   background-color: rgb(238 242 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-orange-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
+}
+
 .bg-pink-400{
   --tw-bg-opacity: 1;
   background-color: rgb(244 114 182 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-200{
@@ -1290,19 +1301,14 @@ select{
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .bg-slate-700{
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
 }
 
-.bg-orange-700{
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-yellow-400{
@@ -1310,9 +1316,28 @@ select{
   background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
+.bg-opacity-10{
+  --tw-bg-opacity: 0.1;
+}
+
+.bg-opacity-15{
+  --tw-bg-opacity: 0.15;
+}
+
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
+}
+
+.bg-opacity-25{
+  --tw-bg-opacity: 0.25;
+}
+
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
+}
+
+.bg-opacity-40{
+  --tw-bg-opacity: 0.4;
 }
 
 .bg-opacity-95{
@@ -1325,30 +1350,6 @@ select{
 
 .bg-opacity-\[63\%\]{
   --tw-bg-opacity: 63%;
-}
-
-.bg-opacity-40{
-  --tw-bg-opacity: 0.4;
-}
-
-.bg-opacity-30{
-  --tw-bg-opacity: 0.3;
-}
-
-.bg-opacity-20{
-  --tw-bg-opacity: 0.2;
-}
-
-.bg-opacity-10{
-  --tw-bg-opacity: 0.1;
-}
-
-.bg-opacity-15{
-  --tw-bg-opacity: 0.15;
-}
-
-.bg-opacity-25{
-  --tw-bg-opacity: 0.25;
 }
 
 .bg-gradient-to-l{
@@ -1463,6 +1464,11 @@ select{
   padding-right: 5rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1533,20 +1539,20 @@ select{
   padding-top: 9rem;
 }
 
-.pt-72{
-  padding-top: 18rem;
-}
-
 .pt-6{
   padding-top: 1.5rem;
+}
+
+.pt-60{
+  padding-top: 15rem;
 }
 
 .pt-64{
   padding-top: 16rem;
 }
 
-.pt-60{
-  padding-top: 15rem;
+.pt-72{
+  padding-top: 18rem;
 }
 
 .font-aurore{
@@ -1591,6 +1597,14 @@ select{
   line-height: 1;
 }
 
+.text-\[20px\]{
+  font-size: 20px;
+}
+
+.text-\[21px\]{
+  font-size: 21px;
+}
+
 .text-\[71px\]{
   font-size: 71px;
 }
@@ -1602,18 +1616,6 @@ select{
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[20px\]{
-  font-size: 20px;
-}
-
-.text-\[29px\]{
-  font-size: 29px;
-}
-
-.text-\[24px\]{
-  font-size: 24px;
 }
 
 .font-semibold{
@@ -1658,12 +1660,12 @@ select{
   opacity: 0.3;
 }
 
-.opacity-\[79\%\]{
-  opacity: 79%;
-}
-
 .opacity-40{
   opacity: 0.4;
+}
+
+.opacity-\[79\%\]{
+  opacity: 79%;
 }
 
 .shadow{
@@ -1716,16 +1718,16 @@ select{
   transition-duration: 150ms;
 }
 
+.duration-200{
+  transition-duration: 200ms;
+}
+
 .duration-300{
   transition-duration: 300ms;
 }
 
 .duration-500{
   transition-duration: 500ms;
-}
-
-.duration-200{
-  transition-duration: 200ms;
 }
 
 .ease-in{
@@ -1745,12 +1747,6 @@ select{
 .hover\:scale-125:hover{
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-90:hover{
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1784,12 +1780,6 @@ select{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow:hover{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-lg:hover{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1806,24 +1796,24 @@ select{
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.hover\:shadow-red-400:hover{
-  --tw-shadow-color: #f87171;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-yellow-400:hover{
-  --tw-shadow-color: #facc15;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .hover\:shadow-red-600:hover{
   --tw-shadow-color: #dc2626;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
 @media (min-width: 640px){
+  .sm\:mx-20{
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
   .sm\:w-\[560px\]{
     width: 560px;
+  }
+
+  .sm\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .sm\:pl-24{
